# BubbleBreaker

./: CMakeLists.txt  CMakeSettings.json  README.md
src/: main.cpp
src/Core/: App.cpp  App.h  Entity.cpp  Entity.h  EntityWithVelocity.h  Game.cpp  Game.h  Game.inl  IUpdatable.h  Resources.h  ResourcesManager.cpp  ResourcesManager.h
src/Game/: Ball.cpp  Ball.h  Brick.cpp  Brick.h  MainMenu.cpp  MainMenu.h  Paddle.cpp  Paddle.h  SoloGame.cpp  SoloGame.h
src/Utils/: Logger.cpp  Logger.h
